# compiler-legacy

./: .gitignore  CMakeLists.txt  Node_.hpp  bridges.cpp  bridges.h  grammar.lex  grammar.y  main.cpp
Node/: Expr_.hpp  Identifier.hpp  Stmt_.hpp  Type.hpp  Type_.hpp
Node/Expr/: Value_.hpp
Node/Expr/Value/: Numeric_.hpp
Node/Expr/Value/Numeric/: Float.hpp  Integer.hpp
Node/Stmt/: Expression.hpp  Return.hpp  VariableDefine.hpp
Node/Type/: Numeric.hpp
Node/Type/Numeric/: Float.hpp  Integer.hpp
Parser/: Numeric_.hpp
Parser/Numeric/: Float.hpp  Integer.hpp
ast/: CMakeLists.txt  Node.cpp  Node.hpp  ast.hpp
ast/Node/: Expr.cpp  Expr.hpp  Stmt.cpp  Stmt.hpp  Type.cpp  Type.hpp
ast/Node/Expr/: BinaryOperator.hpp  ElementFetch.hpp  Function.hpp  FunctionCall.hpp  SingleExprFunction.hpp  UnaryOperator.hpp  Value.hpp  VariableFetch.hpp  When.hpp
ast/Node/Expr/Function/: Argument.hpp
ast/Node/Expr/Value/: Character.hpp  Numeric.hpp  String.hpp
ast/Node/Expr/Value/Numeric/: Float.hpp  Integer.hpp
ast/Node/Expr/When/: Case.hpp
ast/Node/Stmt/: Expression.hpp  Return.hpp  VariableDefine.hpp
ast/Node/Type/: Array.hpp  Character.hpp  Function.hpp  Numeric.cpp  Numeric.hpp
ast/Node/Type/Numeric/: Float.hpp  Integer.hpp
examples/: helloworld.sf
src/: CMakeLists.txt  Node_.hpp  Parser_.hpp  bridges.cpp  bridges.h  grammar.lex  grammar.y  main.cpp
src/Node/: Identifier.hpp  Stmt_.hpp  Type_.hpp
src/Node/Expr/: Value_.hpp
src/Node/Expr/Value/: Char.hpp
src/Node/Stmt/: VariableDefine.hpp
src/Node/Type/: Numeric_.hpp
src/Parser/: Char.cpp  Char.hpp  Numeric_.hpp
src/Parser/Numeric/: Float.cpp  Float.hpp  Integer.cpp  Integer.hpp
